# openenv-banknifty-trading

./: Dockerfile  README.md  app.py  banknifty_historical_data.csv  env.py  inference.py  openenv.yaml  pyproject.toml  test.py
server/: app.py
